Create the thud branch
Signed-off-by: hyyoxhk <hyyoxhk@163.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,5 +10,5 @@ BBFILE_PATTERN_meta-imx6ull = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-imx6ull = "6"
 
 LAYERDEPENDS_meta-imx6ull = "core"
-LAYERSERIES_COMPAT_meta-imx6ull = "warrior zeus"
+LAYERSERIES_COMPAT_meta-imx6ull = "thud"
 #LAYERVERSION_meta-imx6ull = 1
