--- a/conf/machine/imx6ull256.conf
+++ b/conf/machine/imx6ull256.conf
@@ -17,7 +17,7 @@ KERNEL_DEVICETREE = "imx6ull-evk-unvs.dtb"
 KERNEL_IMAGETYPE = "zImage"
 
 # TODO: support kernel
-# PREFERRED_PROVIDER_virtual/kernel = "linux-imx"
+PREFERRED_PROVIDER_virtual/kernel = "linux-imx"
 
 # TODO: support u-boot
 # PREFERRED_PROVIDER_virtual/bootloader = "u-boot-imx"
