Support u-boot and kernel compile
Signed-off-by: hyyoxhk <hyyoxhk@163.com>

--- a/conf/machine/imx6ull128.conf
+++ b/conf/machine/imx6ull128.conf
@@ -17,13 +17,16 @@ KERNEL_DEVICETREE = "imx6ull-evk-unvs.dtb"
 KERNEL_IMAGETYPE = "zImage"
 
 # TODO: support kernel
-# PREFERRED_PROVIDER_virtual/kernel = "linux-imx"
+PREFERRED_PROVIDER_virtual/kernel = "linux-imx"
 
 # TODO: support u-boot
-# PREFERRED_PROVIDER_virtual/bootloader = "u-boot-imx"
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot-imx"
 
 # u-boot defconfig
 UBOOT_MACHINE = "imx6ull-evk-unvs-nand_defconfig"
+
+# USE u-boot.imx
+UBOOT_SUFFIX = "imx"
 
 # Default serial consoles (TTYs)
 SERIAL_CONSOLES = "115200;ttymxc0"
