--- a/conf/machine/imx6ull256.conf
+++ b/conf/machine/imx6ull256.conf
@@ -20,10 +20,13 @@ KERNEL_IMAGETYPE = "zImage"
 PREFERRED_PROVIDER_virtual/kernel = "linux-imx"
 
 # TODO: support u-boot
-# PREFERRED_PROVIDER_virtual/bootloader = "u-boot-imx"
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot-imx"
 
 # u-boot defconfig
 UBOOT_MACHINE = "imx6ull-evk-unvs-nand_defconfig"
+
+# USE u-boot.imx
+UBOOT_SUFFIX = "imx"
 
 # Default serial consoles (TTYs)
 SERIAL_CONSOLES = "115200;ttymxc0"
