--- a/conf/machine/imx6ull256.conf
+++ b/conf/machine/imx6ull256.conf
@@ -19,7 +19,8 @@ KERNEL_IMAGETYPE = "zImage"
 # TODO: support kernel
 PREFERRED_PROVIDER_virtual/kernel = "linux-imx"
 
-# TODO: support u-boot
+# support u-boot
+EXTRA_IMAGEDEPENDS += "u-boot-imx"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-imx"
 
 # u-boot defconfig
@@ -30,6 +31,8 @@ UBOOT_SUFFIX = "imx"
 
 # Default serial consoles (TTYs)
 SERIAL_CONSOLES = "115200;ttymxc0"
+
+EXTRA_IMAGEDEPENDS += "padding-native"
 
 # Default FSTYPES requested
 IMAGE_FSTYPES ?= "tar.xz ext4 ubi"
