style: clean TODO tag
Signed-off-by: hyyoxhk <hyyoxhk@163.com>

--- a/conf/machine/imx6ull256.conf
+++ b/conf/machine/imx6ull256.conf
@@ -16,7 +16,7 @@ KERNEL_DEVICETREE = "imx6ull-evk-unvs.dtb"
 # kernel image type
 KERNEL_IMAGETYPE = "zImage"
 
-# TODO: support kernel
+# support kernel
 PREFERRED_PROVIDER_virtual/kernel = "linux-imx"
 
 # support u-boot
