--- a/conf/machine/imx6ull128.conf
+++ b/conf/machine/imx6ull128.conf
@@ -16,10 +16,11 @@ KERNEL_DEVICETREE = "imx6ull-evk-unvs.dtb"
 # kernel image type
 KERNEL_IMAGETYPE = "zImage"
 
-# TODO: support kernel
+# support kernel
+EXTRA_IMAGEDEPENDS += "u-boot-imx"
 PREFERRED_PROVIDER_virtual/kernel = "linux-imx"
 
-# TODO: support u-boot
+# support u-boot
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-imx"
 
 # u-boot defconfig
@@ -30,6 +31,8 @@ UBOOT_SUFFIX = "imx"
 
 # Default serial consoles (TTYs)
 SERIAL_CONSOLES = "115200;ttymxc0"
+
+EXTRA_IMAGEDEPENDS += "padding-native"
 
 # Default FSTYPES requested
 IMAGE_FSTYPES ?= "tar.xz ext4 ubi"
